--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "@babel/register": "7.4.4",
+    "core-js": "^3.3.6",
     "express": "4.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
     "@babel/plugin-proposal-class-properties": "7.4.4",
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
@@ -31,12 +34,9 @@
     "@babel/plugin-syntax-import-meta": "7.2.0",
     "@babel/plugin-transform-async-to-generator": "7.4.4",
     "@babel/plugin-transform-strict-mode": "7.2.0",
-    "@babel/preset-env": "7.4.5",
-    "@babel/preset-react": "7.0.0",
     "@hot-loader/react-dom": "16.8.6",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.6",
-    "core-js": "3.1.3",
     "regenerator-runtime": "0.13.2"
   }
 }
